add updated templates for pr-2

--- a/Flask_and_FastAPI_frameworks/PR-2/templates/base_template.html
+++ b/Flask_and_FastAPI_frameworks/PR-2/templates/base_template.html
@@ -31,6 +31,9 @@
         <li>
             <a class="main_menu__link" href="/contacts.html/">Контакты</a>
         </li>
+        <li>
+            <a class="main_menu__link" href="/login.html/">Вход</a>
+        </li>
     </ul>
 </nav>
 <header class="header">
