add updated files for pr-3

--- a/Flask_and_FastAPI_frameworks/PR-3/templates/base_template.html
+++ b/Flask_and_FastAPI_frameworks/PR-3/templates/base_template.html
@@ -31,12 +31,15 @@
         <li>
             <a class="main_menu__link" href="/contacts.html/">Контакты</a>
         </li>
+        <li>
+            <a class="main_menu__link" href="/login.html/">Вход</a>
+        </li>
     </ul>
 </nav>
 <header class="header">
     <h1 class="page_title">
         {% block header %}
-        Заголовок
+            <a>Добро пожаловать!</a>
         {% endblock %}
     </h1>
 </header>
